--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,8 +1,6 @@
 .nav {
-  display: grid;
-  grid-template-columns: repeat(8, auto);
-  justify-content: end;
-  align-items: end;
+  display: flex;
+  justify-content: flex-end;
 
   &__link {
     display: grid;
